# splunk-sdk-games

./: .gitignore  .pylintrc  README.md  SECURITY.MD  config.py.example  docker_run_squid.sh  example_write_raw_json.py  json_search_wrapped.py  jsonreader_test.py  original_example_create.py  original_xml_resultsreader.py  proxy_connection.py  pyproject.toml  run_tests.sh  saved-search-perms.py  search_jobs_filtered.py  squid.conf  test1.py  test2.py  test3.py  test4.py  test_file_jsonreader.py  test_file_jsonreader_create.py  test_file_resultsreader.py  utils.py  write_raw_json.py  write_raw_json_job_create.py  write_raw_xml.py
