[tool.poetry]
name = "splunk-sdk-games"
version = "0.1.0"
description = ""
authors = ["James Hodgkinson <james@terminaloutcomes.com>"]

packages = [{ include = "*.py" }]

[tool.poetry.dependencies]
python = "^3.9"
# splunk-sdk = {path = "splunk-sdk-python"}
splunk-sdk = "^2.1.0"

[tool.poetry.dev-dependencies]
pytest = "^8.3.4"
pylint = "^3.3.4"
black = "^25.1.0"
mypy = "^1.15"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "splunk-sdk-games"
version = "0.1.0"
authors = [{ name = "James Hodgkinson", email = "james@terminaloutcomes.com" }]
